--- a/Reviews/style.css
+++ b/Reviews/style.css
@@ -7,12 +7,24 @@ body{
 
 img{
     width: 200px;
+    height: auto;
     border-radius: 50%;
+    box-shadow:0px 4px  #5E8B7E;
+    object-fit: cover;
     
+}
+
+h4,p{
+    margin-left: 20px;
+    margin-right: 20px;
+    text-align: center;
+    letter-spacing: 0.5px;
 }
 
 
 /*Title*/
+
+
 
 .title{
     
@@ -21,6 +33,8 @@ img{
     color: #2F5D62;
     letter-spacing: 2px;
 }
+
+
 
 
 .underline{
@@ -39,17 +53,52 @@ img{
     margin-top: 50px;
     margin-left: auto;
     margin-right: auto;
-    width: 400px;
+    width: 600px;
     height: auto;
     background-color: tomato;
     text-align: center;
+    background-color: white;
 }
 
-i{
+
+#job{
+    color: #5E8B7E;
+    margin-top: -10px;
+    text-transform: uppercase;
+}
+
+#author{
+    text-transform: uppercase;
+    letter-spacing: 1.5px;
+}
+
+.prev , .next {
     color:  #A7C4BC; 
+    background-color: transparent;
+    padding-bottom: 15px;
+    font-size: 1.25rem;
+    background: transparent;
+    border-color: transparent;
+    margin: 0 0.5rem;
+    cursor: pointer;
 }
 
-h4,p{
-    margin-left: 20px;
-    margin-right: 20px;
+#info{
+    word-spacing: 1px;
 }
+
+
+
+.random-btn{
+    background-color: transparent;
+    margin-top: 0.5rem;
+    color: #2F5D62;
+    padding: 0.25rem 0.5rem;
+    text-transform: capitalize;
+    border-radius:15px;
+    border-color:#2F5D62 ;
+    cursor: pointer;
+}
+
+
+
